<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aghagha.tagg.FragmentGantiPassword">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="10dp">
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gantipw_pw"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gantipw_pw2"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <EditText
                android:id="@+id/et_password3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/gantipw_pw2_konfirm"
                android:inputType="textPassword"
                android:textColor="@color/colorAccent" />
        </android.support.design.widget.TextInputLayout>
        <Button
            android:id="@+id/save"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/profil_simpan_data"
            android:textColor="@android:color/white"
            android:background="@color/colorAccent"/>
    </LinearLayout>
</FrameLayout>
