<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@color/colorGray"
    tools:context="com.aghagha.tagg.CreateTugasActivity">
    <View
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:layout_width="0px"
        android:layout_height="0px"/>
    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:titleTextColor="@android:color/white"
        android:background="@color/colorAccent">
    </android.support.v7.widget.Toolbar>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white">
        <EditText
            android:id="@+id/et_judul"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_judul_tugas"
            android:inputType="text"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorCrimson"/>
    </android.support.design.widget.TextInputLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:background="@android:color/white"
        android:layout_marginTop="10dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/prompt_mapel_tugas"/>
        <Spinner
            android:id="@+id/mapel"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            style="@style/Widget.AppCompat.DropDownItem.Spinner">

        </Spinner>
    </LinearLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/et_konten"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_konten_tugas"
            android:inputType="textMultiLine"
            android:lines="5"
            android:gravity="top"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorCrimson"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/white"
        android:layout_marginTop="10dp">
        <EditText
            android:id="@+id/et_deadline"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_deadline_tugas"
            android:inputType="date"
            android:gravity="top"
            android:textColor="@android:color/black"
            android:textColorHint="@color/colorCrimson"
            android:focusable="false"
            android:clickable="true"/>
    </android.support.design.widget.TextInputLayout>

    <Button
        android:id="@+id/save"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/tugas_save_button"
        android:textColor="@android:color/white"
        android:background="@color/colorAccent"/>

</LinearLayout>

