<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.aghagha.tagg.CreateTopikActivity">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">
        <View
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:layout_width="0px"
            android:layout_height="0px"/>
        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:titleTextColor="@android:color/white"
            android:background="@color/colorAccent">
        </android.support.v7.widget.Toolbar>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/et_judul"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_judul_tugas"
                android:inputType="text"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorCrimson"/>
        </android.support.design.widget.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:background="@android:color/white"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/prompt_create_topik_tujuan"/>
            <Spinner
                android:id="@+id/tujuan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                style="@style/Widget.AppCompat.DropDownItem.Spinner">

            </Spinner>
        </LinearLayout>

        <android.support.design.widget.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white"
            android:layout_marginTop="10dp">
            <EditText
                android:id="@+id/et_konten"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/prompt_konten_tugas"
                android:inputType="textMultiLine"
                android:lines="5"
                android:gravity="top"
                android:textColor="@android:color/black"
                android:textColorHint="@color/colorCrimson"/>
        </android.support.design.widget.TextInputLayout>
        <ImageView
            android:id="@+id/ivGambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:adjustViewBounds="true" />
        <LinearLayout
            android:id="@+id/llSettingGambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">
            <Button
                android:id="@+id/btHapusGambar"
                android:text="@string/prompt_topik_hapus_gambar"
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@color/colorTextRed"
                android:layout_weight="1"/>
            <Button
                android:id="@+id/btUbahGambar"
                android:text="@string/prompt_topik_ubah_gambar"
                android:textColor="@android:color/white"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:background="@android:color/holo_orange_dark"
                android:layout_weight="1"/>
        </LinearLayout>

        <Button
            android:id="@+id/btGambar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="@string/prompt_topik_tambah_gambar"
            android:textColor="@android:color/white"/>

        <Button
            android:id="@+id/btSimpan"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/colorAccent"
            android:text="Tambahkan topik"
            android:textColor="@android:color/white"/>
    </LinearLayout>
</ScrollView>
